# AD688-Project

./: .gitattributes  .gitignore  .nojekyll  README.md  _quarto.yml  about.html  ai_vs_traditional.html  ai_vs_traditional.ipynb  ai_vs_traditional.qmd  career_plan.html  career_plan.qmd  data_analysis.html  data_analysis.ipynb  data_analysis.qmd  data_analysis_backup.qmd  eda.html  final_report.docx  final_report.html  final_report.qmd  gender_politics.html  index.html  index.qmd  ml_methods.html  ml_methods.ipynb  ml_methods.qmd  ml_methods_2.html  ml_methods_2.qmd  nlp_methods.html  prompt.html  prompt.qmd  pyproject.toml  references.bib  requirements.txt  research_introduction.html  robots.txt  search.json  sitemap.xml  skill_gap_analysis.html  skill_gap_analysis.qmd
_site/: about.html  ai_vs_traditional.html  career_plan.html  data_analysis.html  eda.html  final_report.docx  final_report.html  gender_politics.html  index.html  ml_methods.html  ml_methods_2.html  nlp_methods.html  prompt.html  research_introduction.html  search.json  skill_gap_analysis.html  styles.css
_site/figures/: updated_skills_data.csv
ai_vs_traditional_files/execute-results/: html.json
figures/: interactive_plots.html  skills_data.csv
output/: companies.csv
venv_clean/: pyvenv.cfg
